# t8wyo

./: .gitmodules  AUTHORS  LICENSE  README.md  makescript.sh
cmake/: FindMKL.cmake  version.cmake
example/: input.1  input.t8wyo
scripts/: build_3PL.sh  build_solver.sh  build_t8wyo.sh
src/t8wyo/: CMakeLists.txt
src/t8wyo/driver/: CMakeLists.txt
src/t8wyo/driver/src/: CMakeLists.txt  main.F90  my_kinddefs.F90
src/t8wyo/driver/src/bak/: amr_initialize.cxx  amr_initialize.h  t8wyo_cmesh_from_mcell.cxx
src/t8wyo/driver/src/bak/CELL3D/: CMakeLists.txt  abort_all.F90  all_reduce_max.F90  cell3d_init.F90  char_adjust.F90  get_time_mp.F90  global_arrays_dynamic.F90  init_io.F90  io_params.F90  makefile  mpi_schedule_typedef.F90  mpi_schedules.F90  my_kinddefs.F90  mympif.h  params.F90  wout.F90
src/t8wyo/include/: memory.hxx  memory_utilities.h  precision_types.h  t8wyo_adapt.h  t8wyo_build_lists_ext.h  t8wyo_cell3d.h  t8wyo_cmesh_from_mcell.h  t8wyo_forest_aux.h  t8wyo_globals.h  t8wyo_initialize.h  t8wyo_interface.h  t8wyo_solver.hxx
src/t8wyo/src/: CMakeLists.txt  amr_initialize.cxx  amr_initialize.h  main.cxx  main.h  t8wyo_adapt.cxx  t8wyo_build_lists_ext.cxx  t8wyo_cmesh_from_mcell.cxx  t8wyo_forest_aux.cxx  t8wyo_initialize.cxx  t8wyo_interface.cxx
src/t8wyo/src/CELL3D/: CMakeLists.txt  all_reduce_min.F90  all_reduce_sum.F90  cell3d.F90  cell3d_flux_test.F90  cell3d_initialize.F90  cell3d_read_mesh.F90  cell3d_test_connectivity.F90  get_filename1.F90  local_arrays_dynamic.F90  mp_stuff.F90  mpi_schedule_read.F90  mpi_to_gpt.F90  my_allocate.F90  my_deallocate.F90  my_mpi_barrier.F90  my_typedefs.F90  program_mpi_init.F90  readarg.F90  readpm.F90  stop_all.F90  triarea.F90
src/t8wyo/src/bak/: amr_test.cxx  amr_test.h  t8wyo_cell3d.cxx
